      (through a view).
    * The rpmhelper.Header object can now produce dependency sets that
      represent what an RPM requires and provides.
    * A new RPM dependency class has been added. This class is used
      to represent dependencies expressed in RPM packages that cannot
      be mapped directly to a native Conary dependency.

  o Build Changes:
    * When cooking groups where checkOnlyByDefaultDeps is set to False added
      dependencies will now inherit the byDefaultness of the depending
      component. (CNY-3195)
    * The imageGroup flag in group recipes now implies
      checkOnlyByDefaultDeps=False. (CNY-3195)

Changes in 2.0.50:
  o Bug Fixes:
    * cvc rdiff now functions correctly on trove versions where no
      previous version exists. (CNY-3218)
    * Updates of multiple flavored groups containing pre-update scripts
      no longer fail after the critical update is applied. The fixed
      Conary issue is related to CNY-3216, but only manifests itself
      when multiple groups are present. (CNY-3219)
    * Path-based action build requirement discovery now functions
      correctly when spaces are present in environment variables or
      adjacent spaces are present before the name of the executable in
      a command string. (CNY-3224)
    * When building local changes, conary would sometimes look through
      the database by fileId to get the path for a file it needed,
      instead of just looking in the filesystem directly. That caused a
      failure when two paths had the same fileId but one of them had
      been removed from the system. (CNY-3226)
    * Building from the repository will no longer attempt to re-download
      autosourced files. (CNY-3221)

  o Internal Changes:
    * Conary will now link against an embedded copy of sqlite if a
      specific version of sqlite has previously been configured and
      built under the conary/pysqlite3/ directory.  At this time,
      the supported version is 3.6.18.
